--- a/src/scenes/Success/Success.scss
+++ b/src/scenes/Success/Success.scss
@@ -1,11 +1,26 @@
 //@import "../../index.scss";
 
 .booked-text {
-    font-family: 'Squada One', cursive;;
+    font-family: 'Squada One', cursive;
+    text-transform: uppercase;
     font-size: 37px;
     font-weight: 500;
     letter-spacing: 1.8px;
     margin-bottom: 0.5em;
     text-align: center;
     margin-top: 30vh;
+    margin-bottom: 20px;
+}
+
+img {
+    margin:0;
+    display: inline-block;
+}
+
+.container {
+    text-align: center;
+}
+
+.column {
+    display: inline-block;
 }
